# opensearch-rmcp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  QUESTION.md  README.md  build.rs  docker-compose.yml  justfile
just/: build.sh  check.sh  common.sh  deploy-macos.sh  just.md  logs-macos.sh  restart-macos.sh  run.sh  status-macos.sh  undeploy-macos.sh
src/: lib.rs  search.rs
src/cratesio/: client.rs
src/mcp/: auth.rs  config.rs  mod.rs  server.rs  tools.rs
src/rerank/: client.rs  mod.rs  types.rs
src/searxng/: client.rs  mapper.rs  types.rs
