[package]
name = "openperplexity"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7"
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
